--- a/app/index.html
+++ b/app/index.html
@@ -17,9 +17,9 @@
 
 <body>
   <nav class="navbar">
-    <a href="index.html" class="logo"><img src="assets/images/logo.png" alt="bloc jams logo"></a>
+    <a ui-sref="index.html" class="logo"><img src="assets/images/logo.png" alt="bloc jams logo"></a>
     <div class="links-container">
-      <a href="collection.html" class="navbar-link">collection</a>
+      <a ui-sref="collection.html" class="navbar-link">collection</a>
     </div>
   </nav>
   <ui-view></ui-view>
