--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="blocjams">
+<html ng-app="blocJams">
 
 <head lang="en">
   <meta charset="UTF-8">
@@ -17,16 +17,18 @@
 
 <body>
   <nav class="navbar">
-    <a ui-sref="index.html" class="logo"><img src="assets/images/logo.png" alt="bloc jams logo"></a>
+    <a ui-sref="landing" class="logo"><img src="assets/images/logo.png" alt="bloc jams logo"></a>
     <div class="links-container">
-      <a ui-sref="collection.html" class="navbar-link">collection</a>
+      <a ui-sref="collection" class="navbar-link">collection</a>
     </div>
   </nav>
   <ui-view></ui-view>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.2.0/buzz.min.js"></script>
   <script src="/scripts/app.js"></script>
   <script src="/scripts/services/Fixtures.js"></script>
+  <script src="/scripts/services/SongPlayer.js"></script>
   <script src="/scripts/controllers/LandingCtrl.js"></script>
   <script src="/scripts/controllers/CollectionCtrl.js"></script>
   <script src="/scripts/controllers/AlbumCtrl.js"></script>
